k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: notes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/0chk4r1k/notes-app/backend:prod
          ports:
            - containerPort: 5000
          command: ["sh", "-c"]
          args:
            - npx prisma migrate deploy && npm start
